HTTP-154 - Continue on error and metadata column support (#173)
Signed-off-by: davidradl <david_radley@uk.ibm.com>