@@ -1,11 +1,6 @@
 package com.getindata.connectors.http.internal.table.lookup;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import org.apache.flink.configuration.ConfigOptions;
 import org.apache.flink.metrics.groups.CacheMetricGroup;
@@ -19,9 +14,14 @@ import org.apache.flink.table.connector.source.lookup.LookupFunctionProvider;
 import org.apache.flink.table.connector.source.lookup.PartialCachingAsyncLookupProvider;
 import org.apache.flink.table.connector.source.lookup.PartialCachingLookupProvider;
 import org.apache.flink.table.connector.source.lookup.cache.LookupCache;
+import org.apache.flink.table.data.ArrayData;
+import org.apache.flink.table.data.GenericMapData;
 import org.apache.flink.table.data.RowData;
+import org.apache.flink.table.data.StringData;
 import org.apache.flink.table.runtime.connector.source.LookupRuntimeProviderContext;
+import org.apache.flink.table.types.AtomicDataType;
 import org.apache.flink.table.types.DataType;
+import org.apache.flink.table.types.logical.IntType;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.BeforeEach;
@@ -33,31 +33,34 @@ import static org.apache.flink.table.factories.utils.FactoryMocks.createTableSou
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import static com.getindata.connectors.http.internal.table.lookup.HttpLookupTableSource.ReadableMetadata.ERROR_STRING;
+import static com.getindata.connectors.http.internal.table.lookup.HttpLookupTableSource.ReadableMetadata.HTTP_COMPLETION_STATE;
+import static com.getindata.connectors.http.internal.table.lookup.HttpLookupTableSource.ReadableMetadata.HTTP_HEADERS;
+import static com.getindata.connectors.http.internal.table.lookup.HttpLookupTableSource.ReadableMetadata.HTTP_STATUS_CODE;
 import static com.getindata.connectors.http.internal.table.lookup.HttpLookupTableSourceFactory.row;
-
 
 class HttpLookupTableSourceTest {
 
     public static final DataType PHYSICAL_ROW_DATA_TYPE =
-        row(List.of(DataTypes.FIELD("id", DataTypes.STRING().notNull())));
+            row(List.of(DataTypes.FIELD("id", DataTypes.STRING().notNull())));
 
     private static final ResolvedSchema SCHEMA =
-        new ResolvedSchema(
-            Arrays.asList(
-                Column.physical("id", DataTypes.STRING().notNull()),
-                Column.physical("msg", DataTypes.STRING().notNull()),
-                Column.physical("uuid", DataTypes.STRING().notNull()),
-                Column.physical("details", DataTypes.ROW(
-                    DataTypes.FIELD("isActive", DataTypes.BOOLEAN()),
-                    DataTypes.FIELD("nestedDetails", DataTypes.ROW(
-                            DataTypes.FIELD("balance", DataTypes.STRING())
-                        )
-                    )
-                ).notNull())
-            ),
-            Collections.emptyList(),
-            UniqueConstraint.primaryKey("id", List.of("id"))
-        );
+            new ResolvedSchema(
+                    Arrays.asList(
+                            Column.physical("id", DataTypes.STRING().notNull()),
+                            Column.physical("msg", DataTypes.STRING().notNull()),
+                            Column.physical("uuid", DataTypes.STRING().notNull()),
+                            Column.physical("details", DataTypes.ROW(
+                                    DataTypes.FIELD("isActive", DataTypes.BOOLEAN()),
+                                    DataTypes.FIELD("nestedDetails", DataTypes.ROW(
+                                                    DataTypes.FIELD("balance", DataTypes.STRING())
+                                            )
+                                    )
+                            ).notNull())
+                    ),
+                    Collections.emptyList(),
+                    UniqueConstraint.primaryKey("id", List.of("id"))
+            );
 
     // lookupKey index {{0}} means first column.
     private final int[][] lookupKey = {{0}};
@@ -67,40 +70,128 @@ class HttpLookupTableSourceTest {
 
         LookupRow expectedLookupRow = new LookupRow();
         expectedLookupRow.addLookupEntry(
-            new RowDataSingleValueLookupSchemaEntry(
-                "id",
-                RowData.createFieldGetter(DataTypes.STRING().notNull().getLogicalType(), 0)
-            )
+                new RowDataSingleValueLookupSchemaEntry(
+                        "id",
+                        RowData.createFieldGetter(DataTypes.STRING().notNull().getLogicalType(), 0)
+                )
         );
         expectedLookupRow.setLookupPhysicalRowDataType(PHYSICAL_ROW_DATA_TYPE);
+    }
+
+    @Test
+    void testListReadableMetadata() {
+        HttpLookupTableSource tableSource =
+                (HttpLookupTableSource) createTableSource(SCHEMA, getOptions());
+        Map<String, DataType> listMetadataMap = tableSource.listReadableMetadata();
+        Map<String, DataType> expectedMap = new LinkedHashMap<>();
+        expectedMap.put(HTTP_STATUS_CODE.key, new AtomicDataType(new IntType(true)));
+        expectedMap.put(HTTP_HEADERS.key, DataTypes.MAP(DataTypes.STRING(), DataTypes.ARRAY(DataTypes.STRING())));
+        expectedMap.put(ERROR_STRING.key, DataTypes.STRING());
+        expectedMap.put(HTTP_COMPLETION_STATE.key, DataTypes.STRING());
+
+        assertThat(listMetadataMap).isEqualTo(expectedMap);
+    }
+
+    @Test
+    void testsummaryString() {
+        HttpLookupTableSource tableSource =
+                (HttpLookupTableSource) createTableSource(SCHEMA, getOptions());
+        assertThat(tableSource.asSummaryString()).isEqualTo("Http Lookup Table Source");
+    }
+
+    @Test
+    void testreadReadableMetadata() {
+        HttpLookupTableSource tableSource =
+                (HttpLookupTableSource) createTableSource(SCHEMA, getOptions());
+        final String testErrorString = "ABC";
+        final int testStatusCode = 500;
+        final HttpCompletionState testCompletionState = HttpCompletionState.HTTP_ERROR_STATUS;
+        Map<String, List<String>> testHeaders = new HashMap<>();
+        testHeaders.put("AAA",List.of("BBB","CCC"));
+        testHeaders.put("DDD",List.of("EEE"));
+        HttpRowDataWrapper httpRowDataWrapper = HttpRowDataWrapper.builder()
+                .errorMessage(testErrorString)
+                .httpStatusCode(500)
+                .httpHeadersMap(testHeaders)
+                .httpCompletionState( testCompletionState)
+                .build();
+        assertThat(ERROR_STRING.converter.read(httpRowDataWrapper))
+            .isEqualTo(StringData.fromString(testErrorString));
+        assertThat(ERROR_STRING.converter.read(null))
+                .isNull();
+        assertThat(HTTP_STATUS_CODE.converter.read(httpRowDataWrapper))
+            .isEqualTo(Integer.valueOf(testStatusCode));
+        assertThat(HTTP_STATUS_CODE.converter.read( null))
+                .isNull();
+        Object readResultForHeaders = HTTP_HEADERS.converter.read(httpRowDataWrapper);
+        assertThat(HTTP_HEADERS.converter.read( null))
+                .isNull();
+        assertThat(readResultForHeaders).isInstanceOf(GenericMapData.class);
+        GenericMapData mapData = (GenericMapData) readResultForHeaders;
+
+        // Verify the map has the expected keys
+        ArrayData keys = mapData.keyArray();
+        assertThat(keys.size()).isEqualTo(2);
+
+        // Create a map to store the converted data for comparison
+        Map<String, List<String>> actualMap = convertGenericMapDataToMap(mapData, keys);
+        // Now compare the extracted map with the expected map
+        assertThat(actualMap).isEqualTo(testHeaders);
+
+        assertThat(HTTP_COMPLETION_STATE.converter.read(null)).isNull();
+
+        assertThat(HTTP_COMPLETION_STATE.converter.read( httpRowDataWrapper))
+                .isEqualTo(StringData.fromString(testCompletionState.name()));
+    }
+
+    private static @NotNull Map<String, List<String>>
+        convertGenericMapDataToMap(GenericMapData genericMapData, ArrayData keys) {
+        Map<String, List<String>> map = new HashMap<>();
+        ArrayData valueArray = genericMapData.valueArray();
+        // Extract and convert each key-value pair
+        for (int i = 0; i < keys.size(); i++) {
+            ArrayData values = valueArray.getArray(i);
+            StringData key = keys.getString(i);
+            String keyStr = key.toString();
+            List<String> valueList = new ArrayList<>();
+
+            // Extract each string from the array
+            for (int j = 0; j < values.size(); j++) {
+                StringData element = values.getString(j);
+                valueList.add(element.toString());
+            }
+
+            map.put(keyStr, valueList);
+        }
+        return map;
     }
 
     @Test
     @SuppressWarnings("unchecked")
     void shouldCreateTableSourceWithParams() {
         HttpLookupTableSource tableSource =
-            (HttpLookupTableSource) createTableSource(SCHEMA, getOptions());
+                (HttpLookupTableSource) createTableSource(SCHEMA, getOptions());
 
         LookupTableSource.LookupRuntimeProvider lookupProvider =
-            tableSource.getLookupRuntimeProvider(new LookupRuntimeProviderContext(lookupKey));
+                tableSource.getLookupRuntimeProvider(new LookupRuntimeProviderContext(lookupKey));
         HttpTableLookupFunction tableFunction = (HttpTableLookupFunction)
-            ((LookupFunctionProvider) lookupProvider).createLookupFunction();
+                ((LookupFunctionProvider) lookupProvider).createLookupFunction();
 
         LookupRow actualLookupRow = tableFunction.getLookupRow();
         assertThat(actualLookupRow).isNotNull();
         assertThat(actualLookupRow.getLookupEntries()).isNotEmpty();
         assertThat(actualLookupRow.getLookupPhysicalRowDataType())
-            .isEqualTo(PHYSICAL_ROW_DATA_TYPE);
+                .isEqualTo(PHYSICAL_ROW_DATA_TYPE);
 
         HttpLookupConfig actualLookupConfig = tableFunction.getOptions();
         assertThat(actualLookupConfig).isNotNull();
         assertThat(
-            actualLookupConfig.getReadableConfig().get(
-                ConfigOptions.key("connector").stringType().noDefaultValue())
+                actualLookupConfig.getReadableConfig().get(
+                        ConfigOptions.key("connector").stringType().noDefaultValue())
         )
-            .withFailMessage(
-                "Readable config probably was not passed from Table Factory or it is empty.")
-            .isNotNull();
+                .withFailMessage(
+                        "Readable config probably was not passed from Table Factory or it is empty.")
+                .isNotNull();
     }
 
     @Test
@@ -109,32 +200,32 @@ class HttpLookupTableSourceTest {
         Map<String, String> options = getOptionsWithAsync();
 
         HttpLookupTableSource tableSource =
-            (HttpLookupTableSource) createTableSource(SCHEMA, options);
+                (HttpLookupTableSource) createTableSource(SCHEMA, options);
 
         AsyncLookupFunctionProvider lookupProvider =
-            (AsyncLookupFunctionProvider)
-                tableSource.getLookupRuntimeProvider(
-                    new LookupRuntimeProviderContext(lookupKey));
+                (AsyncLookupFunctionProvider)
+                        tableSource.getLookupRuntimeProvider(
+                                new LookupRuntimeProviderContext(lookupKey));
 
         AsyncHttpTableLookupFunction tableFunction =
-            (AsyncHttpTableLookupFunction) lookupProvider.createAsyncLookupFunction();
+                (AsyncHttpTableLookupFunction) lookupProvider.createAsyncLookupFunction();
 
         LookupRow actualLookupRow = tableFunction.getLookupRow();
         assertThat(actualLookupRow).isNotNull();
         assertThat(actualLookupRow.getLookupEntries()).isNotEmpty();
         assertThat(actualLookupRow.getLookupPhysicalRowDataType())
-            .isEqualTo(PHYSICAL_ROW_DATA_TYPE);
+                .isEqualTo(PHYSICAL_ROW_DATA_TYPE);
 
         HttpLookupConfig actualLookupConfig = tableFunction.getOptions();
         assertThat(actualLookupConfig).isNotNull();
         assertThat(actualLookupConfig.isUseAsync()).isTrue();
         assertThat(
-            actualLookupConfig.getReadableConfig().get(HttpLookupConnectorOptions.ASYNC_POLLING)
+                actualLookupConfig.getReadableConfig().get(HttpLookupConnectorOptions.ASYNC_POLLING)
         )
-            .withFailMessage(
-                "Readable config probably was not passed" +
-                    " from Table Factory or it is empty.")
-            .isTrue();
+                .withFailMessage(
+                        "Readable config probably was not passed" +
+                                " from Table Factory or it is empty.")
+                .isTrue();
     }
 
     @ParameterizedTest
@@ -190,8 +281,8 @@ class HttpLookupTableSourceTest {
         Class expected;
 
         private TestSpec(boolean hasCache,
-            boolean isAsync,
-            Class expected) {
+                         boolean isAsync,
+                         Class expected) {
             this.hasCache = hasCache;
             this.isAsync = isAsync;
             this.expected = expected;
@@ -246,8 +337,8 @@ class HttpLookupTableSourceTest {
 
     private Map<String, String> getOptions() {
         return Map.of(
-            "connector", "rest-lookup",
-            "url", "http://localhost:8080/service",
-            "format", "json");
+                "connector", "rest-lookup",
+                "url", "http://localhost:8080/service",
+                "format", "json");
     }
 }
